--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link 
+    <link rel="stylesheet" href="css/style.css"> 
 </head>
+
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio fugit beatae animi? Saepe error ullam,
+        officia eligendi dolorem ad molestiae distinctio tempore, doloremque aliquam iusto atque similique quaerat?
+        Quibusdam, similique.</p>
+        <div class="box"></div>
+
 </body>
-</html>
+ </html>
